Fix gap between avatar and name in tweet card

--- a/public/styles/timeline.css
+++ b/public/styles/timeline.css
@@ -27,6 +27,7 @@
   display: flex;
   align-items: center;
   margin: 0;
+  gap: 0.7em;
 }
 .tweet header img {
   width: 5rem;
